2011-09-21  Ilya Tikhonovsky  <loislo@chromium.org>

        Web Inspector: extend UI perf tests coverage. Elements panel opens first time.
        https://bugs.webkit.org/show_bug.cgi?id=68432

        Reviewed by Pavel Feldman.

        * inspector/performance/resources/first-open-elements.html: Added.
        * inspector/performance/resources/performance-test.js:

2011-09-21  Philippe Normand  <pnormand@igalia.com>

        Unreviewed, skip some more flaky SVG tests on GTK.

        * platform/gtk/Skipped:

2011-09-21  Jochen Eisinger  <jochen@chromium.org>

        Unreviewed, fix baselines for cross-origin-xsl-redirect-BLOCKED

        * http/tests/security/cross-origin-xsl-redirect-BLOCKED-expected.txt:
        * platform/chromium-cg-mac/http/tests/security/cross-origin-xsl-redirect-BLOCKED-expected.txt:
        * platform/chromium-mac/http/tests/security/cross-origin-xsl-redirect-BLOCKED-expected.txt:
        * platform/chromium-win/http/tests/security/cross-origin-xsl-redirect-BLOCKED-expected.txt:
        * platform/gtk/http/tests/security/cross-origin-xsl-redirect-BLOCKED-expected.txt: Removed
        * platform/mac-wk2/http/tests/security/cross-origin-xsl-redirect-BLOCKED-expected.txt:
        * platform/qt-wk2/Skipped:
        * platform/qt-wk2/http/tests/security/cross-origin-xsl-redirect-BLOCKED-expected.txt:
        * platform/qt/http/tests/security/cross-origin-xsl-redirect-BLOCKED-expected.png: Removed
        * platform/qt/http/tests/security/cross-origin-xsl-redirect-BLOCKED-expected.txt: Removed
        * platform/win-wk2/http/tests/security/cross-origin-xsl-redirect-BLOCKED-expected.txt:

2011-09-21  Keishi Hattori  <keishi@webkit.org>

        [chromium] rebaseline caused by r95567

        * platform/chromium-cg-mac-leopard/fast/clip/overflow-border-radius-fixed-position-expected.png: Added.
        * platform/chromium-mac-leopard: Added.
        * platform/chromium-mac-leopard/fast: Added.