@@ -1,0 +1,36 @@
+<html>
+<head>
+<script src="../../../http/tests/inspector/inspector-test.js"></script>
+<script src="performance-test.js"></script>
+<script>
+
+function test()
+{
+    WebInspector.showPanel("resources");
+    WebInspector.settings.resourcesLastSelectedItem.set(WebInspector.mainResource._documentURL);
+
+    function test(timer)
+    {
+        WebInspector.showPanel("audits");
+
+        var showPanelTimerCookie = timer.start("resources-panel-show");
+        InspectorTest.addBackendResponseSniffer(PageAgent, "getResourceContent", function() {
+            timer.finish(showPanelTimerCookie);
+            timer.done();
+        });
+        WebInspector.panels.resources._resetResourcesTree();
+        WebInspector.resourceTreeModel.frontendReused();
+        WebInspector.showPanel("resources");
+    }
+
+    InspectorTest.runPerformanceTest(test, 5000);
+}
+
+</script>
+</head>
+
+<body onload="runTest()">
+</body>
+</body>
+</html>
+
