@@ -1,5 +1,14 @@
 2011-09-21  Ilya Tikhonovsky  <loislo@chromium.org>
 
+        Web Inspector: UI performance test for Resource panel first open experience.
+        https://bugs.webkit.org/show_bug.cgi?id=68527
+
+        Reviewed by Pavel Feldman.
+
+        * inspector/performance/resources/first-open-resources.html: Added.
+
+2011-09-21  Ilya Tikhonovsky  <loislo@chromium.org>
+
         Web Inspector: extend UI perf tests coverage. Elements panel opens first time.
         https://bugs.webkit.org/show_bug.cgi?id=68432
 
